fixed some style issues on mobile

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,6 +10,7 @@
     box-shadow: 5px 5px black;
     padding: 5px;
     margin-left: 20px;
+    color: black;
   }
 }
 
@@ -24,6 +25,7 @@
     box-shadow: 5px 5px black;
     padding: 5px 10px;
     margin-left: 20px;
+    color:black;
   }
 
 
@@ -44,6 +46,7 @@
   box-shadow: 5px 5px black;
   padding: 10px 15px;
   margin-right: 10px;
+  color:black;
 }
 .get-started-btn:hover{
   box-shadow: none;
@@ -60,6 +63,7 @@
   box-shadow: 5px 5px black;
   padding: 7px 15px;
   margin-top: 20px;
+  color:black;
 }
 
 .first-btn{
@@ -72,6 +76,7 @@
   box-shadow: 5px 5px black;
   padding: 10px 20px;
   margin-top: 20px;
+  color:black;
 }
 
 .post-btn:hover, .update-btn:hover, .first-btn:hover{
@@ -89,6 +94,7 @@
   box-shadow: 5px 5px black;
   padding: 8px 15px;
   margin: 20px 0px;
+  color:black;
 }
 
 .comment-delete-btn{
@@ -115,6 +121,7 @@
   border-radius: 30px;
   box-shadow: 2.5px 2.5px black;
   padding: 4px 8px;
+  color: black;
 }
 
 .like-btn:hover{
