--- a/app/assets/stylesheets/pages/_post.scss
+++ b/app/assets/stylesheets/pages/_post.scss
@@ -93,6 +93,10 @@
     margin-bottom: 10px;
     width: 120%;
 }
+  h3{
+    font-family: 'Geneva';
+    font-size: 24px;
+  }
 }
 
 @media (min-width: 769px) {
@@ -183,6 +187,11 @@
     justify-content: space-between;
     margin-bottom: 10px;
     width: 134%;
+  }
+
+  h3{
+    font-family: 'Geneva';
+    font-size: 24px;
   }
 }
 
