--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -153,3 +153,7 @@
 .profile-text{
   padding: 0px 40px 0px 40px;
 }
+
+.black{
+  color:black;
+}
